fixed overlapping buttons in mainpage

--- a/src/views/cssFiles/mainPage.css
+++ b/src/views/cssFiles/mainPage.css
@@ -38,10 +38,12 @@ body {
 #cartBtn {
   border: none;
   background: none;
-  position: relative;
-  top: 2px;
-  right: 19px;
   outline: none;
+}
+
+.btn-group {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .cart-icon {
@@ -129,10 +131,7 @@ body {
 
 
 .cart-counter {
-  position: relative;
   background-color: var(--purple-btn-color);
-  right: 21px;
-  top: 2px;
   padding: 1px 6px;
   color: white;
   font-size: 21px;
